--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
 *.class
+*.classpath
+*.project
+*.settings
+*.lst
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
