--- a/pom.xml
+++ b/pom.xml
@@ -107,5 +107,11 @@
 			<artifactId>ST4</artifactId>
 			<version>4.0.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.14</version>
+		</dependency>
 	</dependencies>
 </project>
