--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,15 @@
 	<artifactId>pdfapp</artifactId>
 	<version>1.0.0-BETA</version>
 
+	<properties>
+		<apache.poi.version>3.14</apache.poi.version>
+		<apache.pdfbox.version>2.0.1</apache.pdfbox.version>
+		<commons.io.version>2.5</commons.io.version>
+		<commons.logging.version>1.1.1</commons.logging.version>
+		<com.google.guava.version>19.0</com.google.guava.version>
+		<org.bouncycastle.version>1.54</org.bouncycastle.version>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -33,43 +42,49 @@
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
-			<version>2.0.1</version>
+			<version>${apache.pdfbox.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>xmpbox</artifactId>
-			<version>2.0.1</version>
+			<version>${apache.pdfbox.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
+			<version>${commons.io.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15</artifactId>
-			<version>1.44</version>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>${org.bouncycastle.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcmail-jdk15</artifactId>
-			<version>1.44</version>
+			<artifactId>bcmail-jdk15on</artifactId>
+			<version>${org.bouncycastle.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>${org.bouncycastle.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
+			<version>${commons.logging.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>19.0</version>
+			<version>${com.google.guava.version}</version>
 		</dependency>
 
 		<dependency>
@@ -111,7 +126,13 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.14</version>
+			<version>${apache.poi.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${apache.poi.version}</version>
 		</dependency>
 	</dependencies>
 </project>
