--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<version>1.0.0-BETA</version>
 
 	<properties>
+		<java.sdk.version>1.8</java.sdk.version>
 		<apache.poi.version>3.14</apache.poi.version>
 		<apache.pdfbox.version>2.0.1</apache.pdfbox.version>
 		<commons.io.version>2.5</commons.io.version>
@@ -21,8 +22,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.sdk.version}</source>
+					<target>${java.sdk.version}</target>
 				</configuration>
 			</plugin>
 
