--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
 		<commons.logging.version>1.1.1</commons.logging.version>
 		<com.google.guava.version>19.0</com.google.guava.version>
 		<org.bouncycastle.version>1.54</org.bouncycastle.version>
+		<com.google.api-client.version>1.22.0</com.google.api-client.version>
+		<com.google.oauth-client.version>1.22.0</com.google.oauth-client.version>
+		<com.google.apis.version>v1-rev41-1.22.0</com.google.apis.version>
+		<javax.version>7.0</javax.version>
+		<javax.mail.version>1.5.5</javax.mail.version>
+		<org.antlr.st4.version>4.0.8</org.antlr.st4.version>
+		<mysql-connector-java-version>5.1.38</mysql-connector-java-version>
+		<org.hibernate.core.version>5.1.0.Final</org.hibernate.core.version>
+		<org.hibernate.annotations.version>3.5.6-Final</org.hibernate.annotations.version>
 	</properties>
 
 	<build>
@@ -91,37 +100,37 @@
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
-			<version>1.22.0</version>
+			<version>${com.google.api-client.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.google.oauth-client</groupId>
 			<artifactId>google-oauth-client-jetty</artifactId>
-			<version>1.22.0</version>
+			<version>${com.google.oauth-client.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-gmail</artifactId>
-			<version>v1-rev41-1.22.0</version>
+			<version>${com.google.apis.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
+			<version>${javax.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
-			<version>1.5.5</version>
+			<version>${javax.mail.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>ST4</artifactId>
-			<version>4.0.8</version>
+			<version>${org.antlr.st4.version}</version>
 		</dependency>
 
 		<dependency>
@@ -135,5 +144,24 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>${apache.poi.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${org.hibernate.core.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector-java-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+			<version>${org.hibernate.annotations.version}</version>
+		</dependency>
+
 	</dependencies>
 </project>
