--- a/pom.xml
+++ b/pom.xml
@@ -163,5 +163,11 @@
 			<version>${org.hibernate.annotations.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.191</version>
+		</dependency>
+
 	</dependencies>
 </project>
